--- a/pom.xml
+++ b/pom.xml
@@ -401,9 +401,14 @@ Optional parameters:
 					<url>http://download.eclipse.org/releases/luna/</url>
 				</repository>
 				<repository>
+					<id>platform-i-builds</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/eclipse/updates/4.4-I-builds</url>
+				</repository>
+				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20130517111416/repository/</url>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/I20140328134327/repository/</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
