--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@ Optional parameters:
 					<url>http://dist.springsource.com/release/TOOLS/third-party/m2e/</url>
 				</repository>
 				<repository>
+					<id>maven-egit</id>
+					<layout>p2</layout>
+					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201401060023/</url>
+				</repository>
+				<repository>
 					<id>eclipse-integration-commons</id>
 					<layout>p2</layout>
 					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}/e3.7/</url>
@@ -204,6 +209,11 @@ Optional parameters:
 					<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/</url>
 				</repository>
 				<repository>
+					<id>maven-egit</id>
+					<layout>p2</layout>
+					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201401060023/</url>
+				</repository>
+				<repository>
 					<id>eclipse-integration-commons</id>
 					<layout>p2</layout>
 					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}/e3.7/</url>
@@ -276,6 +286,11 @@ Optional parameters:
 					<id>maven-extras-mirror</id>
 					<layout>p2</layout>
 					<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/</url>
+				</repository>
+				<repository>
+					<id>maven-egit</id>
+					<layout>p2</layout>
+					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201401060023/</url>
 				</repository>
 				<repository>
 					<id>eclipse-integration-commons</id>
@@ -372,6 +387,11 @@ Optional parameters:
 					<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/</url>
 				</repository>
 				<repository>
+					<id>maven-egit</id>
+					<layout>p2</layout>
+					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201401060023/</url>
+				</repository>
+				<repository>
 					<id>eclipse-integration-commons</id>
 					<layout>p2</layout>
 					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}/e3.7/</url>
@@ -454,6 +474,11 @@ Optional parameters:
 					<id>maven-extras-mirror</id>
 					<layout>p2</layout>
 					<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/</url>
+				</repository>
+				<repository>
+					<id>maven-egit</id>
+					<layout>p2</layout>
+					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201401060023/</url>
 				</repository>
 				<repository>
 					<id>eclipse-integration-commons</id>
