STS-3761: added Eclipse platform name and version to about dialog

--- a/plugins/org.springsource.sts/about.properties
+++ b/plugins/org.springsource.sts/about.properties
@@ -8,6 +8,7 @@ title=Spring Tool Suite \n\
 \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
+Platform: Eclipse @PLATFORM_VERSION@\n\
 \n\
 Copyright (c) 2007 - 2014 Pivotal Software, Inc.\n\
 All rights reserved. Visit http://spring.io/tools/sts\n\
