--- a/plugins/org.springsource.ggts/plugin.properties
+++ b/plugins/org.springsource.ggts/plugin.properties
@@ -6,6 +6,7 @@ productBlurb=Groovy/Grails Tool Suite \n\
 \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
+Platform: Eclipse @PLATFORM_VERSION@\n\
 \n\
 Copyright (c) 2007 - 2014 Pivotal Software, Inc.\n\
 All rights reserved. Visit http://spring.io/tools/ggts\n\
