--- a/plugins/org.springsource.sts/pom.xml
+++ b/plugins/org.springsource.sts/pom.xml
@@ -40,10 +40,12 @@
 
 					<replace file="${buildDirectory}/plugins/org.springsource.sts/about.properties" token="@QUALIFIER@" value="${qualifier}" summary="yes" />
 					<replace file="${buildDirectory}/plugins/org.springsource.sts/about.properties" token="@CONTEXT_QUALIFIER@" value="${context.qualifier}" summary="yes" />
-					<replace file="${buildDirectory}/plugins/org.springsource.sts/about.properties" token="@BUILD_ID@" value="${build.id}" summary="yes" />		
+					<replace file="${buildDirectory}/plugins/org.springsource.sts/about.properties" token="@BUILD_ID@" value="${build.id}" summary="yes" />
+					<replace file="${buildDirectory}/plugins/org.springsource.sts/about.properties" token="@PLATFORM_VERSION@" value="${dist.platform.name.long}" summary="yes" />
 					<replace file="${buildDirectory}/plugins/org.springsource.sts/plugin.properties" token="@QUALIFIER@" value="${qualifier}" summary="yes" />
-					<replace file="${buildDirectory}/plugins/org.springsource.sts/plugin.properties" token="@CONTEXT_QUALIFIER@" value="${context.qualifier}" summary="yes" />		
-					<replace file="${buildDirectory}/plugins/org.springsource.sts/plugin.properties" token="@BUILD_ID@" value="${build.id}" summary="yes" />		
+					<replace file="${buildDirectory}/plugins/org.springsource.sts/plugin.properties" token="@CONTEXT_QUALIFIER@" value="${context.qualifier}" summary="yes" />
+					<replace file="${buildDirectory}/plugins/org.springsource.sts/plugin.properties" token="@BUILD_ID@" value="${build.id}" summary="yes" />
+					<replace file="${buildDirectory}/plugins/org.springsource.sts/plugin.properties" token="@PLATFORM_VERSION@" value="${dist.platform.name.long}" summary="yes" />
 					
 <!--					<replace file="${buildDirectory}/plugins/com.springsource.sts.ide.ui/content/root.xhtml" token="@QUALIFIER@" value="${qualifier}" summary="yes" /> -->
 					
