--- a/pom.xml
+++ b/pom.xml
@@ -458,7 +458,7 @@ Optional parameters:
 				<repository>
 					<id>groovy</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.3-j8</url>
+					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.4/</url>
 				</repository>
 				<repository>
 					<id>atlassian</id>
