--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@ Optional parameters:
 				<repository>
 					<id>groovy</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e3.7/</url>
+					<url>http://dist.springsource.org/milestone/GRECLIPSE/e3.7</url>
 				</repository>
 				<repository>
 					<id>linked-resources-patch</id>
@@ -191,7 +191,7 @@ Optional parameters:
 				<repository>
 					<id>groovy</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.2/</url>
+					<url>http://dist.springsource.org/milestone/GRECLIPSE/e4.2</url>
 				</repository>
 				<repository>
 					<id>atlassian</id>
@@ -270,7 +270,7 @@ Optional parameters:
 				<repository>
 					<id>groovy</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.2/</url>
+					<url>http://dist.springsource.org/milestone/GRECLIPSE/e4.2</url>
 				</repository>
 				<repository>
 					<id>atlassian</id>
@@ -359,7 +359,7 @@ Optional parameters:
 				<repository>
 					<id>ajdt</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/ajdt/43/dev/update</url>
+					<url>http://download.eclipse.org/tools/ajdt/43j8/dev/update</url>
 				</repository>
 				<repository>
 					<id>swtbot</id>
@@ -369,7 +369,7 @@ Optional parameters:
 				<repository>
 					<id>groovy</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.3-j8</url>
+					<url>http://dist.springsource.org/milestone/GRECLIPSE/e4.3-j8</url>
 				</repository>
 				<repository>
 					<id>atlassian</id>
@@ -458,7 +458,7 @@ Optional parameters:
 				<repository>
 					<id>groovy</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.4/</url>
+					<url>http://dist.springsource.org/milestone/GRECLIPSE/e4.4</url>
 				</repository>
 				<repository>
 					<id>atlassian</id>
