removed eclipse maintenance repo from e43 profile

--- a/pom.xml
+++ b/pom.xml
@@ -326,11 +326,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/kepler/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>kepler-updates</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/maintenance/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
