added maintenance update repo to luna-based builds to adopt early sr1 release candidate builds for testing

--- a/pom.xml
+++ b/pom.xml
@@ -445,11 +445,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.4/</url>
 				</repository>
-				<!--		<repository>
-				<id>juno-updates</id>
+				<repository>
+				<id>luna-updates</id>
 				<layout>p2</layout>
 				<url>http://download.eclipse.org/releases/maintenance/</url>
-				</repository> -->
+				</repository>
 <!--				<repository>
 					<id>platform-i-builds</id>
 					<layout>p2</layout>
