adding force and deep options to OSX code signing

--- a/features/org.springsource.ggts.product/pom.xml
+++ b/features/org.springsource.ggts.product/pom.xml
@@ -379,12 +379,16 @@
 								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
 
 								<exec executable="codesign">
+								    <arg value="--force"/>
+									<arg value="--deep"/>
 								    <arg value="-s"/>
 								    <arg value="Developer ID Application: VMware, Inc."/>
 								    <arg value="${build.destination.cocoa.x86}/ggts-${unqualifiedVersion}.${p2.qualifier}/GGTS.app"/>
 								</exec>
 
 								<exec executable="codesign">
+								    <arg value="--force"/>
+									<arg value="--deep"/>
 								    <arg value="-s"/>
 								    <arg value="Developer ID Application: VMware, Inc."/>
 								    <arg value="${build.destination.cocoa.x86_64}/ggts-${unqualifiedVersion}.${p2.qualifier}/GGTS.app"/>
