--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -295,6 +295,7 @@
 								<exec executable="codesign">
 								    <arg value="--force"/>
 									<arg value="--deep"/>
+									<arg value="--verbose"/>
 								    <arg value="-s"/>
 								    <arg value="Developer ID Application: VMware, Inc."/>
 								    <arg value="${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier}/STS.app"/>
@@ -303,6 +304,7 @@
 								<exec executable="codesign">
 								    <arg value="--force"/>
 									<arg value="--deep"/>
+									<arg value="--verbose"/>
 								    <arg value="-s"/>
 								    <arg value="Developer ID Application: VMware, Inc."/>
 								    <arg value="${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}/STS.app"/>
