--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -138,6 +138,106 @@
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.7</version>
 				<executions>
+					
+					<execution>
+						<id>zip-sts-repository</id>
+						<phase>install</phase>
+						<configuration>
+							<target>
+
+								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
+								<taskdef resource="org/springframework/build/aws/ant/antlib.xml" />
+
+								<property name="site.target.dir" value="${project.build.directory}" />
+								<property name="dist.full.version"
+									value="${unqualifiedVersion}.${p2.qualifier}-${dist.target}" />
+
+								<property name="dist.file.name"
+									value="${dist.project}-${dist.full.version}-updatesite.zip" />
+								<property name="dist.full.path"
+									value="${site.target.dir}/../../${product.project.sts}/target/repository/${dist.file.name}" />
+
+								<delete file="${dist.full.path}" />
+								<zip zipfile="${dist.full.path}" filesonly="true">
+									<zipfileset
+										dir="${site.target.dir}/../../${product.project.sts}/target/repository">
+										<exclude name="*.zip" />
+										<exclude name="**/*.gz" />
+									</zipfileset>
+								</zip>
+								<checksum file="${dist.full.path}" algorithm="SHA1"
+									fileext=".sha1" />
+								<checksum file="${dist.full.path}" algorithm="MD5"
+									fileext=".md5" />
+
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+
+					<execution>
+						<id>upload-sts-repository</id>
+						<phase>deploy</phase>
+						<configuration>
+							<target>
+
+								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
+								<taskdef resource="org/springframework/build/aws/ant/antlib.xml" />
+
+								<property name="site.target.dir" value="${project.build.directory}" />
+								<property name="dist.full.version"
+									value="${unqualifiedVersion}.${p2.qualifier}-${dist.target}" />
+
+								<property name="dist.file.name"
+									value="${dist.project}-${dist.full.version}-updatesite.zip" />
+								<property name="dist.full.path"
+									value="${site.target.dir}/../../${product.project.sts}/target/repository/${dist.file.name}" />
+
+								<s3 accessKey="${dist.accessKey}" secretKey="${dist.secretKey}">
+
+									<delete bucketName="${dist.bucket}">
+										<fileset dir="${dist.path.repo.sts}">
+											<include name="site.xml" />
+											<include name="content.jar" />
+											<include name="artifacts.jar" />
+											<include name="plugins/**" />
+											<include name="features/**" />
+											<include name="binary/**" />
+											<include name="*.zip" />
+											<include name="*.sha1" />
+											<include name="*.md5" />
+										</fileset>
+									</delete>
+
+									<upload bucketName="${dist.bucket}" toDir="${dist.path.repo.sts}"
+										publicRead="true">
+										<fileset
+											dir="${site.target.dir}/../../${product.project.sts}/target/repository">
+											<include name="**/*" />
+											<include name="**" />
+											<exclude name="*.zip" />
+										</fileset>
+									</upload>
+
+									<upload bucketName="${dist.bucket}" file="${dist.full.path}"
+										toFile="${dist.path.repo.sts}/${dist.file.name}" publicRead="true">
+										<metadata name="project.name" value="${dist.name}" />
+										<metadata name="release.type" value="${dist.type}" />
+										<metadata name="bundle.version" value="${dist.full.version}" />
+										<metadata name="package.file.name" value="${dist.file.name}" />
+									</upload>
+
+								</s3>
+
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					
 					<execution>
 						<id>upload-spring-product</id>
 						<phase>deploy</phase>
