--- a/releng/org.springsource.ggts.distribution-bundles/pom.xml
+++ b/releng/org.springsource.ggts.distribution-bundles/pom.xml
@@ -121,6 +121,24 @@
 						</goals>
 					</execution>
 
+					<execution>
+						<id>update-nightly-downloads</id>
+						<phase>deploy</phase>
+						<configuration>
+							<skip>${skip.update-nightly-download-page}</skip>
+							<target>
+								<ant antfile="../../common/build-distribution.xml" target="upload-nightly-website-ggts">
+									<property name="unqualifiedVersion" value="${unqualifiedVersion}" />
+									<property name="p2.qualifier" value="${p2.qualifier}" />
+									<property name="product.folder.sts" value="${product.project.sts}" />
+								</ant>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+
 				</executions>
 
 				<dependencies>
