--- a/pom.xml
+++ b/pom.xml
@@ -549,11 +549,11 @@ Optional parameters:
 				<layout>p2</layout>
 				<url>http://download.eclipse.org/releases/maintenance/</url>
 				</repository> -->
-<!--				<repository>
+				<repository>
 					<id>platform-i-builds</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/eclipse/updates/4.4-I-builds</url>
-				</repository> -->
+					<url>http://download.eclipse.org/eclipse/updates/4.5milestones/</url>
+				</repository>
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
