--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -110,30 +110,6 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.eclipse.tycho.extras</groupId>
-				<artifactId>tycho-p2-extras-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<executions>
-					<execution>
-						<phase>verify</phase>
-						<goals>
-							<goal>mirror</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<source>
-						<repository>
-							<url>file://${project.build.directory}/repository</url>
-							<layout>p2</layout>
-						</repository>
-					</source>
-					<destination>${project.build.directory}/../../${product.project.sts}/target/unitedRepository</destination>
-					<append>true</append>
-				</configuration>
-			</plugin>
-
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.7</version>
@@ -198,7 +174,7 @@
 								<s3 accessKey="${dist.accessKey}" secretKey="${dist.secretKey}">
 
 									<delete bucketName="${dist.bucket}">
-										<fileset dir="${dist.path.repo.sts}">
+										<fileset dir="${dist.path.repo}">
 											<include name="site.xml" />
 											<include name="content.jar" />
 											<include name="artifacts.jar" />
@@ -211,7 +187,7 @@
 										</fileset>
 									</delete>
 
-									<upload bucketName="${dist.bucket}" toDir="${dist.path.repo.sts}"
+									<upload bucketName="${dist.bucket}" toDir="${dist.path.repo}"
 										publicRead="true">
 										<fileset
 											dir="${site.target.dir}/../../${product.project.sts}/target/repository">
@@ -222,7 +198,7 @@
 									</upload>
 
 									<upload bucketName="${dist.bucket}" file="${dist.full.path}"
-										toFile="${dist.path.repo.sts}/${dist.file.name}" publicRead="true">
+										toFile="${dist.path.repo}/${dist.file.name}" publicRead="true">
 										<metadata name="project.name" value="${dist.name}" />
 										<metadata name="release.type" value="${dist.type}" />
 										<metadata name="bundle.version" value="${dist.full.version}" />
@@ -343,30 +319,6 @@
 								  <entry  key="id" value="org.springsource.sts"/>
 								  <entry  key="version" value="${unqualifiedVersion}.${p2.qualifier}"/>
 								  <entry  key="package" value="spring-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}-win32-x86_64.zip"/>
-								</propertyfile>
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-
-					<execution>
-						<id>configure-proxies-for-eclipserun</id>
-						<phase>package</phase>
-						<configuration>
-							<skip>${skip.eclipserun.proxies}</skip>
-							<target>
-								<touch file="${project.build.directory}/work/configuration/.settings/org.eclipse.core.net.prefs" mkdirs="true"/>
-								
-								<propertyfile file="${project.build.directory}/work/configuration/.settings/org.eclipse.core.net.prefs">
-								  <entry  key="eclipse.preferences.version" value="1"/>
-								  <entry  key="nonProxiedHosts" value="${http.nonProxyHosts}"/>
-								  <entry  key="org.eclipse.core.net.hasMigrated" value="true"/>
-								  <entry  key="proxyData/HTTP/hasAuth" value="false"/>
-								  <entry  key="proxyData/HTTP/host" value="${http.proxyHost}"/>
-								  <entry  key="proxyData/HTTP/port" value="${http.proxyPort}"/>
-								  <entry  key="systemProxiesEnabled" value="false"/>
 								</propertyfile>
 							</target>
 						</configuration>
