moved distribution bundle creation to install phase

--- a/releng/org.springsource.sts.distribution-bundles.e45/pom.xml
+++ b/releng/org.springsource.sts.distribution-bundles.e45/pom.xml
@@ -62,7 +62,7 @@
 					
 					<execution>
 						<id>archive-products</id>
-						<phase>verify</phase>
+						<phase>install</phase>
 						<configuration>
 							<target>
 								<ant antfile="../../common/build-distribution.xml" target="create-bundled-distribution-sts-e45">
