--- a/pom.xml
+++ b/pom.xml
@@ -430,21 +430,21 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.4/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>luna-updates</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/releases/maintenance/</url>
+					<url>http://download.eclipse.org/releases/maintenance/</url> -->
 				</repository>
 <!--				<repository>
 					<id>platform-i-builds</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.4-I-builds</url>
 				</repository> -->
-				<repository>
+<!--				<repository>
 					<id>platform-m-builds</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.4-M-builds/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
@@ -531,11 +531,11 @@ Optional parameters:
 				<layout>p2</layout>
 				<url>http://download.eclipse.org/releases/maintenance/</url>
 				</repository> -->
-				<repository>
+<!--				<repository>
 					<id>platform-i-builds</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.5milestones/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
