--- a/pom.xml
+++ b/pom.xml
@@ -559,7 +559,7 @@ Optional parameters:
 				<repository>
 					<id>groovy</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.4</url>
+					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.5/</url>
 				</repository>
 				<repository>
 					<id>atlassian</id>
