--- a/features/org.springsource.sts.product.e4.5/pom.xml
+++ b/features/org.springsource.sts.product.e4.5/pom.xml
@@ -343,7 +343,7 @@
 								    <arg value="--force"/>
 									<arg value="--verbose"/>
 								    <arg value="-s"/>
-								    <arg value="Developer ID Application: Trevor Marshall"/>
+								    <arg value="Trevor Marshall"/>
 								    <arg value="${build.destination.cocoa.x86_64}/STS.app"/>
 								</exec>
 
