added keychain unlocking for osx

--- a/features/org.springsource.sts.product.e4.5/pom.xml
+++ b/features/org.springsource.sts.product.e4.5/pom.xml
@@ -339,6 +339,13 @@
 
 								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
 
+								<exec executable="security" failonerror="true">
+									<arg value="unlock-keychain"/>
+									<arg value="-p"/>
+									<arg value="${env.KEYCHAIN_PASSWORD}"/>
+									<arg value="${env.KEYCHAIN}"/>
+								</exec>
+
 								<exec executable="codesign" failonerror="true">
 									<arg value="--verbose"/>
 								    <arg value="-s"/>
