added keychain arg to codesign

--- a/features/org.springsource.sts.product.e4.5/pom.xml
+++ b/features/org.springsource.sts.product.e4.5/pom.xml
@@ -348,6 +348,8 @@
 
 								<exec executable="codesign" failonerror="true">
 									<arg value="--verbose"/>
+								    <arg value="--keychain"/>
+								    <arg value="${env.KEYCHAIN}"/>
 								    <arg value="-s"/>
 								    <arg value="3rd Party Mac Developer Application: Trevor Marshall"/>
 								    <arg value="${build.destination.cocoa.x86_64}/STS.app"/>
