disable oomph preference recorder by default

--- a/plugins/org.springsource.sts/plugin_customization.ini
+++ b/plugins/org.springsource.sts/plugin_customization.ini
@@ -32,7 +32,6 @@ org.eclipse.m2e.core/eclipse.m2.updateIndexes=false
 
 # Disable Atlassian connector data usage tracking
 com.atlassian.connector.eclipse.monitor.usage/com.atlassian.connector.eclipse.monitor.usage.enabled=false
-
 com.atlassian.connector.eclipse.monitor.ui/com.atlassian.connector.eclipse.monitor.usage.enabled=false
 com.atlassian.connector.eclipse.monitor.ui/com.atlassian.connector.eclipse.monitor.usage.first.time=false
 
@@ -51,3 +50,7 @@ org.eclipse.equinox.p2.ui.sdk.scheduler/remindElapsedTime=4 Hours
 
 # download updates before notifying the user
 org.eclipse.equinox.p2.ui.sdk.scheduler/download=true
+
+# disable the Oomph preference recorder - bug 470430
+# https://bugs.eclipse.org/bugs/show_bug.cgi?id=470430
+org.eclipse.oomph.setup.ui/enable.preference.recorder=false
