--- a/pom.xml
+++ b/pom.xml
@@ -567,6 +567,11 @@ Optional parameters:
 					<url>http://update.atlassian.com/atlassian-eclipse-plugin/rest/e3.7</url>
 				</repository>
 				<repository>
+					<id>m2e-emergency-updates</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/technology/m2e/milestones/1.6/</url>
+				</repository>
+				<repository>
 					<id>maven-wtp</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/m2e-wtp/releases/mars</url>
