--- a/pom.xml
+++ b/pom.xml
@@ -531,11 +531,19 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.5/</url>
 				</repository>
-<!--				<repository>
-					<id>platform-i-builds</id>
+				<repository>
+					<id>platform-m-builds</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/eclipse/updates/4.5milestones/</url>
-				</repository> -->
+					<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
+				</repository>
+
+				<!-- temporary nightly builds for testing newer JDT versions -->
+				<repository>
+					<id>platform-m-builds</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/eclipse/updates/4.6-N-builds/N20150702-2307</url>
+				</repository>
+
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
