removed temporary mars update sites

--- a/pom.xml
+++ b/pom.xml
@@ -526,16 +526,16 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/mars/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>platform</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.5/</url>
-				</repository>
-				<repository>
+				</repository> -->
+<!--				<repository>
 					<id>platform-m-builds</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
-				</repository>
+				</repository> -->
 
 				<!-- temporary nightly builds for testing newer JDT versions -->
 				<repository>
