--- a/pom.xml
+++ b/pom.xml
@@ -526,21 +526,26 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/mars/</url>
 				</repository>
+				<repository>
+					<id>mars-updates</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/maintenance/</url>
+				</repository>
 <!--				<repository>
 					<id>platform</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.5/</url>
 				</repository> -->
-				<repository>
+<!--				<repository>
 					<id>platform-m-builds</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
-				</repository>
+				</repository> -->
 
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20150519210750/repository/</url>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/M20150821153341/repository/</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
@@ -638,21 +643,26 @@ Optional parameters:
 							<layout>p2</layout>
 							<url>http://download.eclipse.org/releases/mars/</url>
 						</repository>
+						<repository>
+							<id>mars-updates</id>
+							<layout>p2</layout>
+							<url>http://download.eclipse.org/releases/maintenance/</url>
+						</repository>
 		<!--				<repository>
 							<id>platform</id>
 							<layout>p2</layout>
 							<url>http://download.eclipse.org/eclipse/updates/4.5/</url>
 						</repository> -->
-						<repository>
+<!--						<repository>
 							<id>platform-m-builds</id>
 							<layout>p2</layout>
 							<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
-						</repository>
+						</repository> -->
 
 						<repository>
 							<id>orbit</id>
 							<layout>p2</layout>
-							<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20150519210750/repository/</url>
+							<url>http://download.eclipse.org/tools/orbit/downloads/drops/M20150821153341/repository/</url>
 						</repository>
 						<repository>
 							<id>mylyn</id>
