--- a/features/org.springsource.sts.product.e4.5-internal/pom.xml
+++ b/features/org.springsource.sts.product.e4.5-internal/pom.xml
@@ -427,6 +427,15 @@
 					</configuration>
 				</plugin>
 
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+				</plugin>
+
 			</plugins>
 		</pluginManagement>
 	</build>
